manifests/datalake/networkpolicy.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: jenkins-agent
  namespace: datalake
spec:
  serviceAccountSelector: role == 'jenkins-agent'
  types:
    - Ingress
    - Egress
  ingress:
    - metadata:
        annotations:
          from: jenkins-master
          to: jenkins-agent
      action: Allow
      source:
        selector: app.kubernetes.io/component == 'jenkins-master'
        namespaceSelector: projectcalico.org/name == 'jenkins'
  egress:
    - metadata:
        annotations:
          from: jenkins-agent
          to: jenkins-master
      action: Allow
      destination:
        selector: app.kubernetes.io/component == 'jenkins-master'
        namespaceSelector: projectcalico.org/name == 'jenkins'
    - metadata:
        annotations:
          from: jenkins-agent
          to: vpc
      action: Allow
      protocol: TCP
      destination:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 9042
    - metadata:
        annotations:
          from: jenkins-agent
          to: mgmt
      action: Allow
      protocol: TCP
      destination:
        selector: vpc == 'mgmt' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 443
          - 80
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: datalake-application
  namespace: datalake
spec:
  types:
    - Egress
  egress:
    - metadata:
        annotations:
          from: datalake-application
          to: vpc
      action: Allow
      source:
        serviceAccounts:
          names:
            - tsb-datalake
            - default
      protocol: TCP
      destination:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 9042
          - 9142
          - 9092
          - 7790
          - 2181
          - 7788
          - 9093
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: datalake-sa-policy
  namespace: datalake
spec:
  types:
    - Egress
  egress:
    - metadata:
        annotations:
          from: datalake-sa
          to: mgmt
      action: Allow
      source:
        serviceAccounts:
          names:
            - tsb-datalake
            - default
      protocol: TCP
      destination:
        nets:
          - 10.161.48.0/20
        ports:
          - 80
          - 443
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: datalake-nginx-ingress
  namespace: datalake
spec:
  serviceAccountSelector: projectcalico.org/name == 'nginx-ingress-ingress-nginx'
  types:
    - Ingress
  ingress:
    - metadata:
      annotations:
        from: vpc
        to: nginx
      action: Allow
      source:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: prometheus-ingress
  namespace: datalake
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: 
          matchLabels:
            app: prometheus
      ports:
        - port: 8080
          protocol: TCP
        - port: 3000
          protocol: TCP
